--- a/comic-book-gallery/Views/ComicBooks/Detail.cshtml
+++ b/comic-book-gallery/Views/ComicBooks/Detail.cshtml
@@ -2,33 +2,23 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Comic Book Detail";
 }
-<!doctype html>
-<html>
-<head>
-    <meta name="viewport"  content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-        <h1>@ViewBag.SeriesTitle</h1>
-        <h2>Issue Number #@ViewBag.IssueNumber</h2>
-        <h5>Description</h5>
-        <div>@Html.Raw(ViewBag.Description)</div>
-        @if (ViewBag.Artists.Length > 0)
-        {
-            <h5>Artists</h5>
-            <div>
-                <ul>
-                    @foreach (var artist in ViewBag.Artists)
-                    {
-                        <li>@artist</li>
-                    }
-                </ul>
-            </div>
-        }
-    </div>
-</body>
 
-</html>
+<h1>@ViewBag.SeriesTitle</h1>
+<h2>Issue Number #@ViewBag.IssueNumber</h2>
+<h5>Description</h5>
+<div>@Html.Raw(ViewBag.Description)</div>
+@if (ViewBag.Artists.Length > 0)
+{
+    <h5>Artists</h5>
+    <div>
+        <ul>
+            @foreach (var artist in ViewBag.Artists)
+            {
+                <li>@artist</li>
+            }
+        </ul>
+    </div>
+}
