--- a/comic-book-gallery/Views/ComicBooks/Index.cshtml
+++ b/comic-book-gallery/Views/ComicBooks/Index.cshtml
@@ -1,7 +1,20 @@
-﻿
+﻿@model comic_book_gallery.Models.ComicBook[]
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Comic Books";
 }
 
-<h1>Index</h1>
+<h1>@ViewBag.Title</h1>
+
+<div class="row">
+    @foreach (var comicBook in Model)
+    {
+        <div class="col-md-3">
+            <h4>@comicBook.DisplayText</h4>
+            <img src="/Images/@comicBook.CoverImageFileName"
+                 alt="@comicBook.DisplayText"
+                 class="img-responsive" />
+        </div>
+    }
+
+</div>
 
