--- a/comic-book-gallery/Views/ComicBooks/Detail.cshtml
+++ b/comic-book-gallery/Views/ComicBooks/Detail.cshtml
@@ -5,6 +5,8 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Comic Book Detail";
+    ViewBag.ShowBackBar = true;
+
 }
 
 <h2>@Model.DisplayText</h2>
